--- a/M14_15_ProjetoModelo/App.config
+++ b/M14_15_ProjetoModelo/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Documents\BD_M14_M15.mdf;Integrated Security=True;Connect Timeout=30"/>
+  </connectionStrings>
 </configuration>
